<resources>
    <string name="app_name">じゃんけんゲーム</string>
    <string name="tv_hand">出す手を選択してください</string>
    <string name="bt_decision">決定</string>
    <string name="tv_gu">グー</string>
    <string name="tv_choki">チョキ</string>
    <string name="tv_pa">パー</string>
    <string name="rt_result">結果</string>
    <string name="rt_win">勝ち</string>
    <string name="rt_draw">引き分け</string>
    <string name="rt_lose">負け</string>
    <string name="bt_back">戻る</string>
    <string name="program_hand">相手の手</string>
    <string name="player_hand">自分の手</string>
</resources>