<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#405CB62A"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_hand"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/imageGu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/select_radio"
            android:button="@null"
            android:checked="true"
            android:drawableBottom="@drawable/janken_gu"
            android:text="@string/tv_gu"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/imageChoki"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/select_radio"
            android:button="@null"
            android:drawableBottom="@drawable/janken_choki"
            android:text="@string/tv_choki"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/imagePa"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/select_radio"
            android:button="@null"
            android:drawableBottom="@drawable/janken_pa"
            android:text="@string/tv_pa"
            android:textAlignment="center" />
    </RadioGroup>

    <Button
        android:id="@+id/btDecision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/bt_decision"
        android:textSize="24sp" />

</LinearLayout>